--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -8,5 +8,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
+@using BlazorWebAssemblyWithIdentity.Shared
 @using BlazorWebAssemblyWithIdentity.Client
 @using BlazorWebAssemblyWithIdentity.Client.Shared
+@using BlazorWebAssemblyWithIdentity.Client.Services
