Users can log in and log out after registering for an account.

--- a/src/Client/Pages/Login.razor
+++ b/src/Client/Pages/Login.razor
@@ -1,5 +1,9 @@
 ﻿@page "/login"
-@layout LoginLayout
+@inherits CustomComponentBase
+@layout AuthLayout
+@inject IAuthService AuthService
+@inject NavigationManager NavigationManager
+@inject AuthenticationStateProvider AuthenticationStateProvider
 
 <PageTitle>Login</PageTitle>
 
@@ -10,7 +14,7 @@
 <div class="container mt-md-5">
     <div class="row justify-content-md-center">
         <div class="col-sm-6">
-            @if (From == "register")
+            @if (IsFromRegister)
             {
                 <div class="alert alert-primary" role="alert">
                     Successfully registered, please use your registration information to log in.
@@ -21,24 +25,24 @@
                     <h1 class="h2 text-center">Login</h1>
                 </div>
                 <div class="card-body">
-                    <EditForm class="form-signin" OnValidSubmit="OnSubmit" Model="loginModel">
+                    <EditForm class="form-signin" OnValidSubmit="OnSubmit" Model="_loginModel">
                         <DataAnnotationsValidator />
 
                         <div class="form-floating mb-3">
-                            <InputText id="inputUsername" class="form-control" @bind-Value="loginModel.UserName" autofocus placeholder="Username" />
+                            <InputText id="inputUsername" class="form-control" @bind-Value="_loginModel.UserName" autofocus placeholder="Username" />
                             <label for="inputUsername">User Name</label>
-                            <ValidationMessage For="@(() => loginModel.UserName)" />
+                            <ValidationMessage For="@(() => _loginModel.UserName)" />
                         </div>
 
                         <div class="form-floating mb-3">
-                            <InputText type="password" id="inputPassword" class="form-control" placeholder="Password" @bind-Value="loginModel.Password" />
+                            <InputText type="password" id="inputPassword" class="form-control" placeholder="Password" @bind-Value="_loginModel.Password" />
                             <label for="inputPassword">Password</label>
-                            <ValidationMessage For="@(() => loginModel.Password)" />
+                            <ValidationMessage For="@(() => _loginModel.Password)" />
                         </div>
 
                         <div class="form-group mb-3">
                             <div class="form-check">
-                                <InputCheckbox id="inputRememberMe" class="form-check-input" @bind-Value="@loginModel.RememberMe" />
+                                <InputCheckbox id="inputRememberMe" class="form-check-input" @bind-Value="@_loginModel.RememberMe" />
                                 <label class="form-check-label" for="inputRememberMe">Remember me</label>
                             </div>
                         </div>
@@ -47,7 +51,7 @@
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
                         </div>
 
-                        <label class="text-danger">@error</label>
+                        <label class="text-danger my-3">@_error</label>
 
                         <NavLink href="register">
                             <h6 class="font-weight-normal text-center">Create account</h6>
@@ -58,26 +62,3 @@
         </div>
     </div>
 </div>
-
-@code {
-    LoginModel loginModel = new LoginModel();
-    string error = String.Empty;
-    string from = String.Empty;
-
-    [Parameter]
-    [SupplyParameterFromQuery]
-    public string From 
-    {
-        get => from;
-        set
-        {
-            if (value != null)
-            {
-                from = value.ToLower();
-            }
-        }
-    }
-
-    void OnSubmit()
-    { }
-}
