--- a/src/Client/Pages/Index.razor
+++ b/src/Client/Pages/Index.razor
@@ -1,10 +1,21 @@
 ﻿@page "/"
+@inherits CustomComponentBase
 @attribute [Authorize]
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, @_userName!</h1>
 
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+@code {
+    private string _userName = default!;
+
+    protected override async Task OnInitializedAsync()
+    {
+        var user = await GetCurrentUser();
+        _userName = user?.Name ?? String.Empty;
+    }
+}
